--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "ember try:each"
+    "test": "mocha --recursive node-tests"
   },
   "dependencies": {
     "broccoli": "^1.1.2",
@@ -45,7 +45,8 @@
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.14.0",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.2.3",
+    "mocha-eslint": "^4.0.0"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
