File hash based caching

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "broccoli-caching-writer": "^3.0.3",
     "broccoli-concat-analyser": "^2.1.0",
     "broccoli-merge-trees": "^2.0.0",
-    "ember-cli-babel": "^6.3.0"
+    "ember-cli-babel": "^6.3.0",
+    "hash-files": "^1.1.1",
+    "sane": "^3.0.0"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
