--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "ember-cli-version-checker": "^2.1.2",
     "hash-files": "^1.1.1",
     "sane": "^3.0.0",
-    "tmp": "^0.0.33"
+    "tmp": "^0.0.33",
+    "touch": "^3.1.0"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.7.0",
