--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "mocha-eslint": "^4.0.0"
   },
   "engines": {
-    "node": "^4.5 || 6.* || >= 7.*"
+    "node": "6.* || 8.* || >= 10.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
