--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "broccoli": "^1.1.2",
     "broccoli-concat-analyser": "^4.1.0",
     "ember-cli-babel": "^6.6.0",
     "hash-files": "^1.1.1",
@@ -32,7 +31,6 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.7.0",
-    "ember-ajax": "^3.0.0",
     "ember-cli": "~3.3.0",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.2.1",
@@ -46,15 +44,13 @@
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
-    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^4.0.0",
     "ember-source": "~3.3.0",
     "ember-source-channel-url": "^1.0.1",
     "ember-try": "^0.2.23",
     "eslint-plugin-ember": "^5.0.0",
     "eslint-plugin-node": "^6.0.1",
-    "loader.js": "^4.2.3",
-    "qunit-dom": "^0.6.2"
+    "loader.js": "^4.2.3"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
