--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-cli-babel": "^6.6.0",
     "ember-cli-version-checker": "^2.1.2",
     "hash-files": "^1.1.1",
+    "intercept-stdout": "^0.1.2",
     "sane": "^3.0.0",
     "tmp": "^0.0.33",
     "touch": "^3.1.0"
