--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "broccoli-concat-analyser": "^4.1.0",
+    "debug": "^3.1.0",
     "ember-cli-babel": "^6.6.0",
     "ember-cli-version-checker": "^2.1.2",
     "hash-files": "^1.1.1",
