Run middleware before Ember app

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "node": "6.* || 8.* || >= 10.*"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "before": "history-support-middleware"
   }
 }
