--- a/package.json
+++ b/package.json
@@ -34,13 +34,11 @@
     "touch": "^3.1.0"
   },
   "devDependencies": {
-    "broccoli-asset-rev": "^2.7.0",
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
     "ember-cli": "~3.3.0",
     "ember-cli-addon-tests": "^0.11.0",
     "ember-cli-dependency-checker": "^2.0.0",
-    "ember-cli-eslint": "^4.2.1",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
@@ -48,15 +46,13 @@
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
-    "ember-disable-prototype-extensions": "^1.1.2",
-    "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~3.3.0",
     "ember-source-channel-url": "^1.0.1",
     "ember-try": "^0.2.23",
+    "eslint": "^5.6.0",
     "eslint-plugin-chai-expect": "^1.1.1",
-    "eslint-plugin-ember": "^5.0.0",
     "eslint-plugin-mocha": "^5.2.0",
     "eslint-plugin-node": "^6.0.1",
     "loader.js": "^4.2.3",
