--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "broccoli-concat-analyser": "^4.3.4",
     "debug": "^3.1.0",
-    "ember-cli-babel": "^6.16.0",
+    "ember-cli-babel": "^7.7.3",
     "ember-cli-version-checker": "^2.1.2",
     "hash-files": "^1.1.1",
     "intercept-stdout": "^0.1.2",
@@ -37,33 +37,33 @@
     "touch": "^3.1.0"
   },
   "devDependencies": {
-    "@ember/optional-features": "^0.6.3",
+    "@ember/optional-features": "^0.7.0",
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
-    "ember-cli": "~3.5.1",
+    "ember-cli": "~3.10.1",
     "ember-cli-addon-tests": "^0.11.0",
-    "ember-cli-dependency-checker": "^3.0.0",
-    "ember-cli-htmlbars": "^3.0.0",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
+    "ember-cli-dependency-checker": "^3.1.0",
+    "ember-cli-htmlbars": "^3.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^2.1.0",
     "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
-    "ember-load-initializers": "^1.1.0",
-    "ember-qunit": "^3.4.1",
+    "ember-load-initializers": "^2.0.0",
+    "ember-qunit": "^4.4.1",
     "ember-resolver": "^5.0.1",
-    "ember-source": "~3.5.1",
+    "ember-source": "~3.10.0",
     "ember-source-channel-url": "^1.1.0",
     "ember-try": "^1.0.0",
     "eslint": "^5.6.0",
     "eslint-plugin-chai-expect": "^1.1.1",
     "eslint-plugin-mocha": "^5.2.0",
-    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-node": "^9.0.1",
     "loader.js": "^4.7.0",
     "mocha": "^5.2.0"
   },
   "engines": {
-    "node": "6.* || 8.* || >= 10.*"
+    "node": "8.* || >= 10.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
