--- a/package.json
+++ b/package.json
@@ -28,15 +28,11 @@
     "test:node": "mocha node-tests/**/*-test.js --recursive"
   },
   "dependencies": {
-    "broccoli-concat-analyser": "^5.0.0",
     "debug": "^4.3.2",
-    "ember-cli-version-checker": "^5.1.2",
-    "hash-files": "^1.1.1",
+    "fast-glob": "^2.2.7",
     "intercept-stdout": "^0.1.2",
     "node-html-light": "^1.4.0",
-    "sane": "^4.1.0",
-    "tmp": "^0.2.1",
-    "touch": "^3.1.0"
+    "source-map-explorer": "^2.0.0"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
@@ -72,15 +68,13 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-qunit": "^7.3.4",
     "loader.js": "^4.7.0",
+    "lodash-es": "^4.17.11",
     "mocha": "^8.4.0",
     "prettier": "^2.8.1",
     "qunit": "^2.19.3",
     "release-it": "^14.10.0",
     "release-it-lerna-changelog": "^3.1.0",
     "webpack": "^5.75.0"
-  },
-  "peerDependencies": {
-    "ember-source": "^3.28.0 || ^4.0.0"
   },
   "engines": {
     "node": "16.* || >= 18"
