--- a/.travis.yml
+++ b/.travis.yml
@@ -1,65 +1,63 @@
+---
 language: node_js
 node_js:
-# we recommend testing addons with the same minimum supported node version as Ember CLI
-# so that your addon works for all apps
-- "8"
+  # we recommend testing addons with the same minimum supported node version as Ember CLI
+  # so that your addon works for all apps
+  - "10"
 
-sudo: false
 dist: trusty
 
 addons:
   chrome: stable
+
 cache:
   yarn: true
 
 env:
   global:
-  # See https://git.io/vdao3 for details.
-  - JOBS=1
+    # See https://git.io/vdao3 for details.
+    - JOBS=1
 
 branches:
   only:
-  - master
-  # npm version tags
-  - /^v\d+\.\d+\.\d+/
+    - master
+    # npm version tags
+    - /^v\d+\.\d+\.\d+/
 
 jobs:
-  fail_fast: true
+  fast_finish: true
   allow_failures:
-  - env: EMBER_TRY_SCENARIO=ember-canary
+    - env: EMBER_TRY_SCENARIO=ember-canary
 
   include:
-  # runs linting and tests with current locked deps
+    # runs linting and tests with current locked deps
+    - stage: "Tests"
+      name: "Tests"
+      script:
+        - yarn lint
+        - yarn test
 
-  - stage: "Tests"
-    name: "Tests"
-    install:
-    - yarn install --non-interactive
-    script:
-    - yarn lint:js
-    - yarn test
+    - stage: "Additional Tests"
+      name: "Floating Dependencies"
+      install:
+        - yarn install --no-lockfile --non-interactive
+      script:
+        - yarn test
 
-  - name: "Floating Dependencies"
-    script:
-    - yarn test
-
-  # we recommend new addons test the current and previous LTS
-  # as well as latest stable release (bonus points to beta/canary)
-  - stage: "Additional Tests"
-    env: EMBER_TRY_SCENARIO=ember-2.13
-  - env: EMBER_TRY_SCENARIO=ember-lts-2.18
-  - env: EMBER_TRY_SCENARIO=ember-lts-3.4
-  - env: EMBER_TRY_SCENARIO=ember-lts-3.8
-  - env: EMBER_TRY_SCENARIO=ember-release
-  - env: EMBER_TRY_SCENARIO=ember-beta
-  - env: EMBER_TRY_SCENARIO=ember-canary
+    # we recommend new addons test the current and previous LTS
+    # as well as latest stable release (bonus points to beta/canary)
+    - env: EMBER_TRY_SCENARIO=ember-lts-3.12
+    - env: EMBER_TRY_SCENARIO=ember-lts-3.16
+    - env: EMBER_TRY_SCENARIO=ember-release
+    - env: EMBER_TRY_SCENARIO=ember-beta
+    - env: EMBER_TRY_SCENARIO=ember-canary
 
 before_install:
-- curl -o- -L https://yarnpkg.com/install.sh | bash
-- export PATH=$HOME/.yarn/bin:$PATH
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH=$HOME/.yarn/bin:$PATH
 
 install:
-- yarn install --no-lockfile --non-interactive
+  - yarn install --non-interactive
 
 script:
-- node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO
+  - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO
