--- a/package.json
+++ b/package.json
@@ -18,16 +18,19 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build",
+    "build": "ember build --environment=production",
+    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
     "start": "ember serve",
     "test": "mocha node-tests/**/*-test.js --recursive"
+
   },
   "dependencies": {
     "broccoli-concat-analyser": "^4.3.4",
     "debug": "^3.1.0",
-    "ember-cli-babel": "^7.7.3",
+    "ember-cli-babel": "^7.18.0",
+    "ember-cli-htmlbars": "^4.2.3",
     "ember-cli-version-checker": "^2.1.2",
     "hash-files": "^1.1.1",
     "intercept-stdout": "^0.1.2",
@@ -37,33 +40,39 @@
     "touch": "^3.1.0"
   },
   "devDependencies": {
-    "@ember/optional-features": "^0.7.0",
+    "@ember/optional-features": "^1.3.0",
+    "@glimmer/component": "^1.0.0",
+    "@glimmer/tracking": "^1.0.0",
+    "babel-eslint": "^10.1.0",
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
-    "ember-cli": "~3.10.1",
+    "ember-auto-import": "^1.5.3",
+    "ember-cli": "~3.17.0",
     "ember-cli-addon-tests": "^0.11.0",
-    "ember-cli-dependency-checker": "^3.1.0",
-    "ember-cli-htmlbars": "^3.0.1",
-    "ember-cli-htmlbars-inline-precompile": "^2.1.0",
-    "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-dependency-checker": "^3.2.0",
+    "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-template-lint": "^1.0.0-beta.1",
-    "ember-cli-uglify": "^2.1.0",
-    "ember-load-initializers": "^2.0.0",
-    "ember-qunit": "^4.4.1",
-    "ember-resolver": "^5.0.1",
-    "ember-source": "~3.10.0",
-    "ember-source-channel-url": "^1.1.0",
-    "ember-try": "^1.0.0",
-    "eslint": "^5.6.0",
+    "ember-cli-uglify": "^3.0.0",
+    "ember-load-initializers": "^2.1.1",
+    "ember-qunit": "^4.6.0",
+    "ember-resolver": "^7.0.0",
+    "ember-source": "~3.17.0",
+    "ember-source-channel-url": "^2.0.1",
+    "ember-template-lint": "^2.4.0",
+    "ember-try": "^1.4.0",
+    "eslint": "^6.8.0",
     "eslint-plugin-chai-expect": "^1.1.1",
     "eslint-plugin-mocha": "^5.2.0",
-    "eslint-plugin-node": "^9.0.1",
+    "eslint-plugin-node": "^11.0.0",
     "loader.js": "^4.7.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "npm-run-all": "^4.1.5"
   },
   "engines": {
-    "node": "8.* || >= 10.*"
+    "node": "10.* || >= 12"
+  },
+  "ember": {
+    "edition": "octane"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
