--- a/package.json
+++ b/package.json
@@ -65,10 +65,15 @@
     "eslint-plugin-node": "^11.1.0",
     "loader.js": "^4.7.0",
     "mocha": "^8.2.0",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "release-it": "^14.2.0",
+    "release-it-lerna-changelog": "^3.0.0"
   },
   "engines": {
     "node": "10.* || >= 12"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   },
   "ember": {
     "edition": "octane"
@@ -77,5 +82,20 @@
     "configPath": "tests/dummy/config",
     "before": "history-support-middleware",
     "demoURL": "https://cdn.rawgit.com/kaliber5/ember-cli-bundle-analyzer/bceb55a7/docs/demo.html"
+  },
+  "release-it": {
+    "plugins": {
+      "release-it-lerna-changelog": {
+        "infile": "CHANGELOG.md",
+        "launchEditor": true
+      }
+    },
+    "git": {
+      "tagName": "v${version}"
+    },
+    "github": {
+      "release": true,
+      "tokenRef": "GITHUB_AUTH"
+    }
   }
 }
