--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "ember-source": "^3.28.0 || ^4.0.0"
   },
   "engines": {
-    "node": "14.* || 16.* || >= 18"
+    "node": "16.* || >= 18"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
@@ -113,5 +113,8 @@
       "release": true,
       "tokenRef": "GITHUB_AUTH"
     }
+  },
+  "volta": {
+    "node": "16.19.0"
   }
 }
