Update repo URLs

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/kaliber5/ember-cli-bundle-analyzer"
+    "url": "https://github.com/simonihmig/ember-cli-bundle-analyzer"
   },
   "license": "MIT",
-  "author": "Simon Ihmig <ihmig@kaliber5.de>",
+  "author": "Simon Ihmig <simon.ihmig@gmail.com>",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -81,7 +81,7 @@
   "ember-addon": {
     "configPath": "tests/dummy/config",
     "before": "history-support-middleware",
-    "demoURL": "https://cdn.rawgit.com/kaliber5/ember-cli-bundle-analyzer/bceb55a7/docs/demo.html"
+    "demoURL": "https://cdn.rawgit.com/simonihmig/ember-cli-bundle-analyzer/bceb55a7/docs/demo.html"
   },
   "release-it": {
     "plugins": {
